# ForgeX

./: Agent.py  metadata_extractor.py  new_test.py  prompts.py  pyproject.toml  r_node.py  requirements.txt  s.py  testing.py  utils.py
agents/: Schemas.py  planner.py  prompts.py
chroma_db/: chroma.sqlite3
context/: scanner.py
forgeX/: __main__.py  main.py
forgeX/agents/: Schemas.py  planner.py  prompts.py  scanner.py
forgeX/agents/state/: state.py
forgeX/cli/: app.py
forgeX/cli/commands/: config.py  doctor.py  init.py  models.py  providers.py  version.py
forgeX/cli/ui/: __init__.py  console.py  panels.py  prompts.py  styles.py
forgeX/config/: constants.py  env_manager.py  exceptions.py  manager.py  models.py  validator.py
forgeX/context/: retriever.py  scanner.py
forgeX/core/agents/: Schemas.py  backend.py  coder.py  planner.py  prompts.py  scanner.py
forgeX/core/engine/: graph.py  nodes.py  state.py
forgeX/security/: models.py  protection.py
forgeX/tools/Terminal/: terminal_tool.py
forgeX/tools/file_tools/: base_file_tool.py  copy_file.py  create_file.py  delete_file.py  edit_file.py  list_dir_tool.py  move_file.py  read_file.py  tools_schema.py  (+1 more)
forge_x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_agent_workspace/: index.html  script.js  style.css
tools/file_tools/: base_file_tool.py  copy_file.py  create_file.py  delete_file.py  edit_file.py  list_dir_tool.py  move_file.py  read_file.py  tools_schema.py  write_file.py
tools/sandbox/: backend.py  docker_backend.py  docker_image.py  models.py
(+10 files in other folders)
