[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-x"
version = "0.1.0"
description = "A terminal-based AI coding agent"
requires-python = ">=3.10"
dependencies = [
    "platformdirs",
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "chromadb",
    "python-dotenv",
    "pydantic",
    "docker",
    "tomlkit",
    "typer",
    "questionary",
    "rich"
]

[project.scripts]
forgex = "forgeX.cli.app:app"

[tool.setuptools.packages.find]
include = ["forgeX*"]
